--- a/Day12/index.html
+++ b/Day12/index.html
@@ -232,7 +232,7 @@
         </div>
     </div>
     <footer class="container-fluid text-center border-top border-light bg-dark text-light">
-        <strong> copyrights @Sathyagar, 2024</strong>
+        <strong> copyrights @Pratheek, 2024</strong>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
